--- a/frontend/web/css/settings.css
+++ b/frontend/web/css/settings.css
@@ -13,3 +13,18 @@
     background-color: #f7f7f7;
     margin-bottom: 20px;
 }
+
+.disabledPagination{
+    display: inline-block;
+    width: 43px;
+    height: 43px;
+    text-align: center;
+    line-height: 43px;
+    font-size: 16px;
+    border-radius: 100%;
+    color: #a749ff;
+    -webkit-box-shadow: 0 0px 12px 0.8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 12px 0.8px rgba(0, 0, 0, 0.1);
+    background-color: #f6f6f6;
+}
+
