--- a/frontend/web/css/settings.css
+++ b/frontend/web/css/settings.css
@@ -28,3 +28,35 @@
     background-color: #f6f6f6;
 }
 
+.modification{
+    font-size: 16px;
+}
+
+.modification li{
+    padding: 0px;
+}
+.modification li span{
+    border: 1px solid #ccc;
+    color: #fff;
+    background-color: #9e9e9e;
+    padding: 2px 3px 2px 3px;
+    margin-right: 2px;
+    font-size: 12px;
+    width: 80px;
+    text-align: center;
+
+}
+.modification .pro-details-quality{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.modification .pro-details-quality .cart-plus-minus, .modification .pro-details-quality .cart-plus-minus input{
+    height: 40px !important;
+}
+.modification .pro-details-quality .cart-plus-minus .qtybutton{
+    line-height: 0px !important;
+}
+.modification .pro-details-quality .pro-details-cart a{
+    padding: 12px 20px 12px;
+}
