--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1817,7 +1817,7 @@ a.default-btn {
         position: absolute;
         top: -9px;
         right: -14px;
-        background-color: #9e9e9e;
+        background-color: #fe0101;
         color: #fff;
         display: inline-block;
         width: 21px;
