--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1351,6 +1351,9 @@ textarea:focus {
 .bg-glaucous {
   background-color: #daedff; }
 
+.bg-red{
+  background-color: #ffcdd2; }
+
 .bg-aqua {
   background-color: #dbfffb; }
 
