--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -4057,7 +4057,10 @@ a.default-btn {
           color: #ffa900; }
     .product-wrap .product-content .product-price span {
       font-size: 15px;
-      color: #9e9e9e;
+      color: #fff;
+      background-color: #fe0101;
+      padding: 2px 4px 2px 4px;
+      border-radius: 1px;
       font-weight: 500;
       margin: 0 9px;
       position: relative; }
