--- a/frontend/web/css/settings.css
+++ b/frontend/web/css/settings.css
@@ -67,3 +67,12 @@
     border: 1px solid #fe0101;
     border-radius: 2px;
 }
+.modifications li {
+    margin-bottom: 10px;
+}
+.modifications span {
+    margin-left: 10px;
+}
+.dec.qtybutton, .inc.qtybutton{
+    font-size: 1rem; !important;
+}
