--- a/frontend/web/css/settings.css
+++ b/frontend/web/css/settings.css
@@ -76,6 +76,9 @@
 .dec.qtybutton, .inc.qtybutton{
     font-size: 1rem; !important;
 }
-#jGrowl, .jGrowl-notification.alert{
-    width: 100%;
+
+@media (max-width: 400px) {
+    #jGrowl, .jGrowl-notification.alert{
+        width: 100%;
+    }
 }
