--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -2635,7 +2635,7 @@ a.default-btn {
     .clickable-mainmenu .clickable-menu-style ul li a {
       color: #9e9e9e;
       font-size: 16px;
-      text-transform: capitalize;
+      text-transform: none;
       padding: 0 0 20px; }
       .clickable-mainmenu .clickable-menu-style ul li a:hover {
         background: transparent;
