--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -2929,9 +2929,9 @@ a.default-btn {
           margin: 6px 0 20px; } }
       @media only screen and (max-width: 767px) {
         .single-slider .slider-content h1 {
-          line-height: 48px;
+          line-height: 38px;
           font-size: 33px;
-          margin: 0px; } }
+          margin: 66px 0 -20px;  } }
       @media only screen and (min-width: 576px) and (max-width: 767px) {
         .single-slider .slider-content h1 {
           font-size: 30px;
@@ -2943,7 +2943,8 @@ a.default-btn {
       border: 1px solid #333;
       text-transform: uppercase;
       line-height: 1;
-      padding: 19px 50px 21px; }
+      padding: 19px 50px 21px;
+      margin-top: 30px;}
       @media only screen and (min-width: 768px) and (max-width: 991px) {
         .single-slider .slider-content .slider-btn a {
           padding: 15px 35px 17px; } }
@@ -2956,7 +2957,9 @@ a.default-btn {
     .single-slider .slider-content.slider-content-10 {
       padding-top: 0; }
   .single-slider .slider-single-img {
-    margin: 0 -80px 0 -80px; }
+    /*margin: 0 -80px 0 -80px; */
+    margin: 0;
+  }
     @media only screen and (min-width: 1200px) and (max-width: 1365px) {
       .single-slider .slider-single-img {
         margin: 0 0px 0 0px; } }
