--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -146,7 +146,10 @@ ul {
 /*-- 
     - Common Classes
 -----------------------------------------*/
-.fix {
+.total-cart{
+  font-size: 10px;
+}
+fix {
   overflow: hidden; }
 
 .hidden {
