--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1802,7 +1802,8 @@ a.default-btn {
       .header-right-wrap .same-style {
         margin-left: 5px; } }
     .header-right-wrap .same-style > a {
-      color: #9e9e9e;
+      /*color: #9e9e9e;*/
+      color: #fe0101;
       font-size: 23px; }
     .header-right-wrap .same-style:first-child {
       margin-left: 0px; }
@@ -1858,7 +1859,8 @@ a.default-btn {
       background: transparent;
       border: none;
       padding: 0;
-      color: #9e9e9e;
+      /*color: #9e9e9e;*/
+      color: #fe0101;
       font-size: 24px;
       position: relative; }
       .header-right-wrap .same-style.cart-wrap button span.count-style {
@@ -1984,9 +1986,14 @@ a.default-btn {
   .header-right-wrap.header-right-wrap-white {
     margin-top: 40px; }
     .header-right-wrap.header-right-wrap-white .same-style > a {
-      color: #fff; }
+      /*color: #fff;*/
+        color: #fe0101;
+
+    }
     .header-right-wrap.header-right-wrap-white .same-style.cart-wrap > button {
-      color: #fff; }
+      /*color: #fff; */
+      color: #fe0101;
+    }
       .header-right-wrap.header-right-wrap-white .same-style.cart-wrap > button span.count-style {
         background-color: #fff;
         color: #9e9e9e; }
@@ -2573,7 +2580,8 @@ a.default-btn {
 .clickable-menu {
   margin-top: 35px; }
   .clickable-menu a {
-    color: #fff;
+    /*color: #fff;*/
+      color: #fe0101;
     font-size: 30px;
     line-height: 1;
     display: inline-block; }
